Tue Jul 12 14:46:53 2005  Boris Kolpackov  <boris@kolpackov.net>

	* protocols/ace/RMCast/Parameters.h:

	Forgot to add this file for Mon Jul 11 20:08:51 2005.

Mon Jul 11 12:51:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-msvc-8.h:
          Only define ACE_HAS_SIG_ATOMIC_T when not building for WinCE.
          Thanks to Mitscher Dubreus <ofup at voila dot fr> for reporting
          this.

Mon Jul 11 12:18:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Thread_Manager.inl:
          Initialise pointer with 0

Mon Jul 11 20:08:51 2005  Boris Kolpackov  <boris@kolpackov.net>

	* protocols/ace/RMCast/Flow.cpp:
	* protocols/ace/RMCast/Flow.h:

	Implemented flow control stack element.

	* protocols/ace/RMCast/Acknowledge.cpp:
	* protocols/ace/RMCast/Acknowledge.h:
	* protocols/ace/RMCast/Fragment.cpp:
	* protocols/ace/RMCast/Fragment.h:
	* protocols/ace/RMCast/Link.cpp:
	* protocols/ace/RMCast/Link.h:
	* protocols/ace/RMCast/Protocol.h:
	* protocols/ace/RMCast/Reassemble.cpp:
	* protocols/ace/RMCast/Reassemble.h:
	* protocols/ace/RMCast/Retransmit.cpp:
	* protocols/ace/RMCast/Retransmit.h:
	* protocols/ace/RMCast/Socket.cpp:
	* protocols/ace/RMCast/Socket.h:

	Made protocol parameters configurable on a per-instance
	basis.

	* protocols/examples/RMCast/Send_Msg/Protocol.h:
	* protocols/examples/RMCast/Send_Msg/Receiver.cpp:

	Made receiver print throughput information.

Mon Jul 11 08:41:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_Thread.h:
          Doxygen improvements

Mon Jul 11 08:10:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added Bug_2174_Regression to the list of tests. It will fail
          until the fix for this bug is in the archive

Sun Jul  10 23:24:12 UTC 2005  Gan Deng  <gan.deng@vanderbilt.edu>

        * etc/DAnCE.doxygen:

	  Added doxygen configuration file for DAnCE.
